// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge 1`] = `
<div
  className="wrc-badge wrc-badge--secondary"
>
  Badge
</div>
`;

exports[`Badge like pill 1`] = `
<div
  className="wrc-badge wrc-badge--secondary wrc-badge--pill"
>
  Badge like pill
</div>
`;
